[package]
name = "NymX"
version = "0.1.2"
edition = "2021"
authors = ["Ch1ffr3punk"]
description = "A data exchange tool for the Nym Mixnet"
license = "Apache 2.0"

[dependencies]
nym-sdk = "1.21.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
ripemd = "0.1"
ssh2 = "0.9"
rpassword = "7"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true