[package]
name = "nymx"
version = "0.1.0"
edition = "2021"
authors = ["Ch1ffr3punk"]
description = "NymX - Anonymous data exchange leveraging SURBs via the Nym Mixnet"
license = "Apache 2.0"

[dependencies]
nym-sdk = "1.21.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
indicatif = "0.17"
ripemd = "0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
rpassword = "7"
